Remove stale payload context menu action